@@ -6,12 +6,12 @@
 config SYSTEM_USBMONITOR
 	bool "USB Monitor"
 	default n
-	depends on USBDEV && USBDEV_TRACE
+	depends on (USBDEV && USBDEV_TRACE) || (USBHOST && USBHOST_TRACE)
 	---help---
-		If USB device tracing is enabled (USBDEV_TRACE), then this option
-		will select the USB monitor.  The USB monitor is a daemon that will
-		periodically collect the buffered USB trace data and dump it to the
-		SYSLOG device.
+		If USB device tracing (USBDEV_TRACE) AND/OR USB host tracing
+		(USBHOST_TRACE) are enabled then this option will select the USB
+		monitor.  The USB monitor is a daemon that will periodically collect
+		the buffered USB trace data and dump it to the SYSLOG device.
 
 if SYSTEM_USBMONITOR
 
@@ -34,34 +34,37 @@ config SYSTEM_USBMONITOR_INTERVAL
 		The rate in seconds that the USB monitor will wait before dumping
 		the next set of buffered USB trace data.  Default:  2 seconds.
 
+if USBDEV && USBDEV_TRACE
 config SYSTEM_USBMONITOR_TRACEINIT
-	bool "Show initialization events"
+	bool "Show USB device initialization events"
 	default n
 	---help---
 		Show initialization events
 
 config SYSTEM_USBMONITOR_TRACECLASS
-	bool "Show class driver events"
+	bool "Show USB device class driver events"
 	default n
 	---help---
 		Show class driver events
 
 config SYSTEM_USBMONITOR_TRACETRANSFERS
-	bool "Show data transfer events"
+	bool "Show USB device data transfer events"
 	default n
 	---help---
 		Show data transfer events
 
 config SYSTEM_USBMONITOR_TRACECONTROLLER
-	bool "Show controller events"
+	bool "Show USB device controller events"
 	default n
 	---help---
 		Show controller events
 
 config SYSTEM_USBMONITOR_TRACEINTERRUPTS
-	bool "Show interrupt-related events"
+	bool "Show USB device interrupt-related events"
 	default n
 	---help---
 		Show interrupt-related events
+
+endif
 endif
 
